04 May 2007

* "match tag ..." is now not supported.
* Permit actions to call other actions:

	action "one" ...
	action "two" ...
	action "three" {
		 ...
		actions { "one" "two" }
	}

  A maximum of five levels is permitted, spoiling the

	action "x" { action "x" }

  fun.

30 April 2007

* Optionally verify SSL certificates. This can be turned on with the
  "verify-certificates" option and disabled per account by appending a
  "no-verify" flag to the definition.
* Option to use PCRE (build with make -DPCRE).

19 April 2007

* Count the number of messages properly when there is no done function (such as
  for NNTP).

10 April 2007

* Install into bin rather than sbin when using GNUmakefile. From Frank Terbeck.

06 April 2007

* fdm 1.1 released.

04 April 2007

* Set the socket non-blocking in before setting up SSL in connect.c, otherwise
  SSL_connect might block.

03 April 2007

* Instead of doing complicated things to see if a mmap'd region is okay, just
  fill it with zeros using write(2). This also avoids FS fragmentation on
  FreeBSD, per its mmap(2). Also use MAP_NOSYNC.

30 March 2007

* Allow plural and singular to be interchanged in most places, don't insist on
  "accounts { "abc" }" and "account "abc"".

29 March 2007

* Tags are now done using an action (tag) rather than a special-case match
  rule. The old way still works but generates a warning which will become an
  error within a few releases.
* Because yacc needs to move back and forwards, just swapping the file out from
  under it when including can cause problems. So, switch to letting lex do all
  the work and feed the include file to yacc as if it was inline. This sucks a
  bit but there aren't many other options. Reported by Frank Terbeck.
* Lambda actions:

	match "regexp" action mbox ...
	match "regexp" actions {
		rewrite ...
		mbox ...
	}

28 March 2007

* Compound actions, using a list in {}s, eg:

	action "abc" {
		rewrite ...
		mbox ...
	}
